--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,15 @@ p {
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin: 0;
+}
+
 
 /* ========== banner css ========== */
 .banner-area{
@@ -41,7 +50,6 @@ p {
     color: #282728;
     font-weight: 400;
     line-height: 27px;
-    padding: 0 96px;
     margin-bottom: 32px;
 }
 
@@ -71,6 +79,12 @@ p {
 .hotspot-area {
     margin-top: -370px;
 }
+
+.hotspot-area img {
+    width: 997px;
+    height: 545px;
+}
+
 
 /* ========== brand css ========== */
 .service-area {
@@ -115,6 +129,7 @@ p {
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
+    margin-bottom: 25px;
 }
 
 .server-protocals .protocals {
@@ -158,7 +173,6 @@ p.header-content {
     line-height: 27px;
     font-weight: 400;
     color: #3D3D3D;
-    padding: 0 215px;
 }
 
 .features-item {
@@ -265,15 +279,163 @@ h2.header-title {
 /* ========== video css ========== */
 .video-feedback-area {
     padding-top: 88px;
-    padding-bottom: 124px;
+    padding-bottom: 120px;
+    background-color: #F1F8FB;
+}
+
+.video-header {
+    margin-bottom: 46px;
+}
+
+/* ========== pricing css ========== */
+.pricing-area {
+    padding-top: 119px;
+    padding-bottom: 155px;
+    background-color: #E8F3F8;
+}
+
+.pricing-header {
+    margin-bottom: 32px;
+}
+
+.pricing-header .header-content {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 700;
+    color: #0096CC;
+}
+
+h3.guarantee-title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+    color: #000000;
+    margin-bottom: 21px;
+}
+
+h3.guarantee-title span {
+    color: #0096CC;
+    font-weight: 900;
+}
+
+.pricing-payment-method .payment-content {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
+    color: #3D3D3D;
+    margin-right: 12px;
+}
+
+.pricing-payment-method .payment-logo {
+    background-color: #fff;
+    padding: 4px 4px;
+    border-radius: 2px;
+    margin-right: 4px;
 }
 
 
+/* ========== pricing css ========== */
+.testimonial-area {
+    margin-top: -60px;
+    padding-bottom: 88px;
+}
 
+.testimonial-area .swiper-slide {
+    display: flex;
+    padding: 34px 106px 65px 65px;
+    background: #FFFFFF;
+    border: 0.5px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 60px 70px rgba(10, 23, 66, 0.04);
+    border-radius: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
 
+.testimonial-area .quote-review {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: -20px;
+}
 
+.testimonial-area .testimonial-quote {
+    background-color: #0096CC26;
+    width: 77px;
+    height: 77px;
+    font-size: 32px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0096CC;
+    margin-left: -34px;
+}
 
+.testimonial-area .testimonial-review {
+    font-size: 14px;
+    color: #F29232;
+    display: flex;
+    gap: 5px;
+}
 
+.testimonial-area h3.slide-title {
+    font-size: 32px;
+    line-height: 38px;
+    font-weight: 700;
+    color: #282728;
+}
 
+.testimonial-area p.slide-content {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #868E95;
+}
+
+.h-border {
+    width: 2px;
+    background: #DEE9F4;
+    height: 231px;
+    margin-right: 47px;
+    margin-left: 60px;
+}
+
+.testimonial-area img.author-img {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 15px;
+}
+
+.testimonial-area h6.author-title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 26px;
+    color: #222831;
+}
+
+.testimonial-area .designation {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #72BF44;
+}
+
+.testimonial-area .swiper-pagination {
+    margin-top: -50px;
+    margin-left: 65px;
+}
+
+.testimonial-area .swiper-pagination-bullet{
+    width: 5px;
+    height: 3px;
+    border-radius: 5px;
+    background-color: #C4C4C4;
+    margin-right: 10px;
+}
+
+.testimonial-area .swiper-pagination-bullet-active {
+    width: 34px;
+    background-color: #0096CC;
+}
 
 
